Fixed page alignment

--- a/app/assets/css/defaults.css
+++ b/app/assets/css/defaults.css
@@ -18,6 +18,9 @@ html,body, body:fullscreen {
     min-height: 100vh;
     width: 100vw;
 }
+body{
+    padding-left: 2rem; /* hardcoded margin based on sidebar edge handle width*/
+}
 h1,h2,h3,h4,h5,h6{
     font-weight: bold;
     color: var(--color-primary);
